Bringing things up to scala 2.11.6

--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
   <groupId>org.bluemold</groupId>
   <artifactId>stm</artifactId>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
   <inceptionYear>2011</inceptionYear>
 
     <name>stm</name>
     <url>http://bluemold.org/stm</url>
 
   <properties>
-    <scala.version>2.10.0</scala.version>
+    <scala.version>2.11.6</scala.version>
   </properties>
 
   <repositories>
@@ -39,12 +39,12 @@
     <dependency>
       <groupId>org.bluemold</groupId>
       <artifactId>concurrent</artifactId>
-      <version>0.1</version>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.bluemold</groupId>
       <artifactId>unsafe</artifactId>
-      <version>0.1</version>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
